--- a/bmiCalculator.html
+++ b/bmiCalculator.html
@@ -5,9 +5,10 @@
     </head>
     <body>
         <h1>BMI Calculator</h1>
-        <form action="/bmicalculator" method="POST"></form>
-        <input type="text" name="Weight" placeholder="Weight">
-        <input type="text" name="Height" placeholder="Height">
-        <button type="submit">Calculate BMI</button>
+        <form action="/bmicalculator" method="POST">
+            <input type="text" name="weight" placeholder="Weight">
+            <input type="text" name="height" placeholder="Height">
+            <button type="submit">Calculate BMI</button>
+        </form>
     </body>
 </html>
