--- a/multiplyNum.html
+++ b/multiplyNum.html
@@ -6,8 +6,8 @@
     <body>
         <h1>Multiply Numbers</h1>
         <form action="/" method="POST">
-            <input type="text" name="number1" placeholder="">
-            <input type="text" name="number2" placeholder="">
+            <input type="text" name="number1" placeholder="Number1">
+            <input type="text" name="number2" placeholder="Number2">
             <button type="submit">Multiply</button>
         </form>
     </body>
